<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Recipe Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Recipe Book</string>
    <string name="nav_header_subtitle">Your Personal Kitchen Assistant</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_ingredients">Ingredients</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_description">Description</string>
    <string name="generate_description">Generate Description</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="predict_ingredients">Predict Ingredients</string>
</resources>